# scMAC

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/examples/map/: bulk_tcr_example.csv  paired_tcr_labels.csv  scmac_llm_reference.npz
models/map/: config_map.json  final_model_map.pth  model_metadata.json  vocab_map.json
scripts/: check_environment.py  make_bulk_example.py  predict_bulk.py  prepare_reference_npz.py  train_llm_reference.py  train_map.py
src/scmac/llm/: Network.py  __init__.py  scMACLLM.py
src/scmac/map/: __init__.py  mapping_unified.py  network.py  pipeline.py  utils.py
